feat: add block vacations

--- a/team.html
+++ b/team.html
@@ -101,6 +101,13 @@
                 <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
             </article>
         </section>
+        <section class="vacations">
+            <div class="vacations__content">
+                <h2 class="vacations__title">Открытые позиции</h2>
+                <p class="vacations__subtitle">Присоединяйтесь к нам</p>
+                <button type="button" class="button-vacations button-vacations_place_team">Узнать больше</button>
+            </div>
+        </section>
     </main>
     <footer class="footer"></footer>
     <script src="scripts/team.js"></script>
