feat: add footer to team page

--- a/team.html
+++ b/team.html
@@ -109,7 +109,75 @@
             </div>
         </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <div class="footer__container">
+                <div class="footer__description">
+                    <div class="footer__team">
+                        <h2 class="footer__team-title">Российская команда</h2>
+                        <p class="footer__team-contacts">contact@unionsmarttech.ru<br>+7 911 932-90-29</p>
+                        <p class="footer__team-contacts">24 Entuziastov street,<br>Saint Petersburg, 191 119</p>
+                    </div>
+                    <div class="footer__team">
+                        <h2 class="footer__team-title">Словацкая команда</h2>
+                        <p class="footer__team-contacts">contact@unionsmarttech.ru<br>+421 494 539-852</p>
+                        <p class="footer__team-contacts">24 Entuziastov street,<br>Saint Petersburg, 191 119</p>
+                    </div>
+                </div>
+                <div class="footer__menu-container">
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Главная</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Команда</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Услуги</a></li>
+                    </ul>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Карьера</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Портфолио</a></li>
+                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Контакты</a></li>
+                    </ul>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Google</p>
+                                <img src="images/social_icon_google.svg" alt="гугл" class="footer__link-image">
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Facebook</p>
+                                <img src="images/social_icon_facebook.svg" alt="фейсбук" class="footer__link-image">
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Instagram</p>
+                                <img src="images/social_icon_instagram.svg" alt="инстаграм" class="footer__link-image">
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">Dribbble</p>
+                                <img src="images/social_icon_dribbble.svg" alt="дриббл" class="footer__link-image">
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="#" class="footer__menu-link">
+                                <p class="footer__link-text" lang="en">linkedin</p>
+                                <img src="images/social_icon_linkedin.svg" alt="линкедин" class="footer__link-image">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__info">
+                <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
+                <div class="footer__policy-container">
+                    <a href="#" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="#" class="footer__policy" lang="en">Cookies Policy</a>
+                </div>
+            </div>
+        
+    </footer>
     <script src="scripts/team.js"></script>
 </body>
 
