feat: add sections header and footer

--- a/projects.html
+++ b/projects.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Команда UST</title>
-    <link rel="stylesheet" href="pages/team-page.css">
+    <title>Наши проекты</title>
+    <link rel="stylesheet" href="pages/projects-page.css">
 </head>
 
 <body class="root">
-    <header class="page-header block-indent">
+    <header class="page-header page-header_place_projects block-indent">
         <div class="heading">
             <a href="#" class="heading__logo-link">
-                <img src="images/logo_ust.svg" alt="логотип" class="heading__logo">
+                <img src="/images/logo_ust.svg" alt="логотип" class="heading__logo">
                 <h2 lang="en" class="heading__logo-title">Union Smart Technology</h2>
                 <p lang="en" class="heading__logo-subtitle">Simple solutions for complex problems</p>
             </a>
@@ -35,78 +35,18 @@
             </nav>
         </div>
         <div class="page-header__content">
-            <h2 class="page-header__title">Будем знакомы</h2>
-            <p class="page-header__subtitle">Команда UST</p>
-            <p class="page-header__description">Мы обеспечиваем развитие интеллектуального потенциала компании,
-                способствуем профессиональному росту наших сотрудников. Работаем в России и странах Европы. Мы создаем
-                достойные условия труда и строго соблюдаем законы, регулирующие отношения между компанией, работниками и
-                государством.</p>
+            <h2 class="page-header__title">Как мы выполняем</h2>
+            <p class="page-header__subtitle">Наши проекты</p>
+            <p class="page-header__description">Мы осуществляем технологическую и бизнес-трансформацию, используя
+                методологию Agile, проверенные на практике платформы для организации совместной работы с заказчиком,
+                передовые инструменты для разработки, многопрофильные команды специалистов с различными навыками и
+                распределенную глобальную модель оказания услуг.</p>
+            <button type="button" class="button-project-order button-project-order_place_projects">Заказать проект</button>
         </div>
     </header>
     <main class="content">
-        <section class="team block-indent">
-            <div class="team__text-block">
-                <h2 class="team__title">Команда, ориентированная на людей</h2>
-                <p class="team__subtitle">В команде нашей компании работают высококвалифицированные IT-специалисты,
-                    которые обладают не только качественными знаниями, но и бесценным опытом в разработке инновационных
-                    продуктов. Самое главное - каждый из них влюблен в то, что делает. Вы можете познакомиться с каждым
-                    участником нашей команды чуть ближе.</p>
-            </div>
-            <article class="business-card">
-                <img src="images/nikolay_shpakov.png" alt="николай_шпаков" class="business-card__image">
-                <h3 class="business-card__title">Николай Шпаков</h3>
-                <p class="business-card__subtitle">Исполнительный директор</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-            <article class="business-card">
-                <img src="images/oleg_naumenko.png" alt="олег_науменко" class="business-card__image">
-                <h3 class="business-card__title">Олег Науменко</h3>
-                <p class="business-card__subtitle">СТО</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-            <article class="business-card">
-                <img src="images/dmitriy_ershov.png" alt="дмитрий_ершов" class="business-card__image">
-                <h3 class="business-card__title">Дмитрий Ершов</h3>
-                <p class="business-card__subtitle">Руководитель группы IOS</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-            <article class="business-card">
-                <img src="images/yaroslav_fomin.png" alt="ярослав_фомин" class="business-card__image">
-                <h3 class="business-card__title">Ярослав Фомин</h3>
-                <p class="business-card__subtitle">Специалист по подбору талантов</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-            <article class="business-card">
-                <img src="images/elena_goriunova.png" alt="елена_горюнова" class="business-card__image">
-                <h3 class="business-card__title">Елена Горюнова</h3>
-                <p class="business-card__subtitle">Руководитель группы дизайнеров</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-            <article class="business-card">
-                <img src="images/yaroslav_fomin2.png" alt="ярослав_фомин" class="business-card__image">
-                <h3 class="business-card__title">Ярослав Фомин</h3>
-                <p class="business-card__subtitle">Руководитель группы контроля качества</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-            <article class="business-card">
-                <img src="images/nikolay_shpakov2.png" alt="николай_шпаков" class="business-card__image">
-                <h3 class="business-card__title">Николай Шпаков</h3>
-                <p class="business-card__subtitle">Управляющий делами</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-            <article class="business-card">
-                <img src="images/olga_naumenko.png" alt="ольга_науменко" class="business-card__image">
-                <h3 class="business-card__title">Ольга Науменко</h3>
-                <p class="business-card__subtitle">Руководитель группы Android</p>
-                <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
-            </article>
-        </section>
-        <section class="vacations">
-            <div class="vacations__content">
-                <h2 class="vacations__title">Открытые позиции</h2>
-                <p class="vacations__subtitle">Присоединяйтесь к нам</p>
-                <button type="button" class="button-vacations button-vacations_place_team">Узнать больше</button>
-            </div>
+        <section class="">
+
         </section>
     </main>
     <footer class="footer">
@@ -176,9 +116,10 @@
                     <a href="#" class="footer__policy" lang="en">Cookies Policy</a>
                 </div>
             </div>
-        
+
     </footer>
-    <script src="scripts/team.js"></script>
+
+    <script src="scripts/projects.js"></script>
 </body>
 
 </html>
