--- a/projects.html
+++ b/projects.html
@@ -41,11 +41,213 @@
                 методологию Agile, проверенные на практике платформы для организации совместной работы с заказчиком,
                 передовые инструменты для разработки, многопрофильные команды специалистов с различными навыками и
                 распределенную глобальную модель оказания услуг.</p>
-            <button type="button" class="button-project-order button-project-order_place_projects">Заказать проект</button>
+            <button type="button" class="button-project-order button-project-order_place_projects">Заказать
+                проект</button>
         </div>
     </header>
     <main class="content">
-        <section class="">
+        <section class="cooperation block-indent">
+            <div class="block-heading">
+                <h2 class="block-heading__title">Сотрудничество</h2>
+                <p class="block-heading__subtitle">С учетом
+                    ваших потребностей</p>
+            </div>
+            <div class="cooperation__slider">
+                <article class="slide">
+                    <img src="images/quick_scaling.png" alt="Быстрое масштабирование." class="slide__img">
+                    <h3 class="slide__title">Быстрое масштабирование</h3>
+                    <p class="slide__subtitle">Мы управляем каждым проектом так, чтобы помочь вам быстро масштабировать
+                        бизнес-решения и соответствовать изменениям в потребностях клиентов вне зависимости от региона,
+                        часового пояса или требующейся функциональности.</p>
+                </article>
+                <article class="slide">
+                    <img src="images/clear_interaction.png" alt="Прозрачное взаимодействие." class="slide__img">
+                    <h3 class="slide__title">Прозрачное взаимодействие</h3>
+                    <p class="slide__subtitle">Ваши результаты — основа нашего успеха. Мы используем новейшие
+                        технологии, нструменты и платформы для совместной работы, чтобы гарантировать прозрачность
+                        взаимодействия и возможность контролировать его из любой точки мира.</p>
+                </article>
+                <article class="slide">
+                    <img src="images/mixed_teams.png" alt="Смешанные команды." class="slide__img">
+                    <h3 class="slide__title">Смешанные команды</h3>
+                    <p class="slide__subtitle">Для создания цифрового опыта или продукта требуются экспертный опыт
+                        и знания специалистов по различным предметным областям. Мы создаем многопрофильные команды для
+                        разработки комплексных технологических решений, которые помогут вам добиться необходимых
+                        результатов.</p>
+                </article>
+            </div>
+        </section>
+        <section class="services">
+            <div class="services__contaner">
+                <div class="services__heading">
+                    <div class="block-heading block-heading_place_projects-services">
+                        <h2 class="block-heading__title">Полный спектр</h2>
+                        <p class="block-heading__subtitle">Наших услуг</p>
+                    </div>
+                    <ul class="services__items">
+                        <li class="services__item">
+                            <img src="images/icon_analyzing.svg" alt="Анализируем." class="services__item-img">
+                            <h3 class="services__item-title">Анализируем</h3>
+                        </li>
+                        <li class="services__item">
+                            <img src="images/icon_prototyping.svg" alt="Прототипируем." class="services__item-img">
+                            <h3 class="services__item-title">Прототипируем</h3>
+                        </li>
+                        <li class="services__item">
+                            <img src="images/icon_designing.svg" alt="Дизайним." class="services__item-img">
+                            <h3 class="services__item-title">Дизайним</h3>
+                        </li>
+                        <li class="services__item">
+                            <img src="images/icon_programming.svg" alt="Программируем." class="services__item-img">
+                            <h3 class="services__item-title">Программируем</h3>
+                        </li>
+                        <li class="services__item">
+                            <img src="images/icon_testing.svg" alt="Тестируем." class="services__item-img">
+                            <h3 class="services__item-title">Тестируем</h3>
+                        </li>
+                        <li class="services__item">
+                            <img src="images/icon_support.svg" alt="Поддерживаем." class="services__item-img">
+                            <h3 class="services__item-title">Поддерживаем</h3>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="services__cards">
+                <article class="services__card">
+                    <p class="services__card-number">1</p>
+                    <div class="services__card-content">
+                        <h3 class="services__card-title">Анализируем</h3>
+                        <p class="services__card-subtitle">Пишем ТЗ для разработки, учитывая бизнес-процессы и
+                            технологии заказчика и потребности пользователей.</p>
+                        <div class="services__card-description">
+                            <p class="services__card-description-text">Мы анализировали, когда делали проект для:</p>
+                            <div class="services__card-description-img-wrapper">
+                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                            </div>
+                            <div class="services__card-description-offer">
+                                <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
+                                    только этот этап.
+                                </p>
+                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                    проект</button>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="services__card">
+                    <p class="services__card-number">2</p>
+                    <div class="services__card-content">
+                        <h3 class="services__card-title">Прототипируем</h3>
+                        <p class="services__card-subtitle">Прорабатываем пользовательские сценарии, проектируем логику приложения, скечируем основные экраны.</p>
+                        <div class="services__card-description">
+                            <p class="services__card-description-text">Мы прототипировали, когда делали проект для:</p>
+                            <div class="services__card-description-img-wrapper">
+                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
+                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                            </div>
+                            <div class="services__card-description-offer">
+                                <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
+                                    только этот этап.
+                                </p>
+                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                    проект</button>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="services__card">
+                    <p class="services__card-number">3</p>
+                    <div class="services__card-content">
+                        <h3 class="services__card-title">Дизайним</h3>
+                        <p class="services__card-subtitle">Адаптируем фирменный стиль заказчика к гайдлайнам платформ. Рисуем удобные и понятные интерфейсы.</p>
+                        <div class="services__card-description">
+                            <p class="services__card-description-text">Мы создавали дизайн, когда делали проект для:</p>
+                            <div class="services__card-description-img-wrapper">
+                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
+                                <img src="images/code_space_logo.svg" alt="Код спэйс." class="services__card-description-img">
+                                <img src="images/actual_logo.svg" alt="Актуаль." class="services__card-description-img">
+                            </div>
+                            <div class="services__card-description-offer">
+                                <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
+                                    только этот этап.
+                                </p>
+                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                    проект</button>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="services__card">
+                    <p class="services__card-number">4</p>
+                    <div class="services__card-content">
+                        <h3 class="services__card-title">Программируем</h3>
+                        <p class="services__card-subtitle">Создаём расширяемую архитектуру, пишем чистый и стабильный код. Интегрируемся с технологиями заказчика.</p>
+                        <div class="services__card-description">
+                            <p class="services__card-description-text">Мы прогаммировали, когда делали проект для:</p>
+                            <div class="services__card-description-img-wrapper">
+                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
+                                <img src="images/code_space_logo.svg" alt="Код спэйс." class="services__card-description-img">
+                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                                <img src="images/actual_logo.svg" alt="Актуаль." class="services__card-description-img">
+                            </div>
+                            <div class="services__card-description-offer">
+                                <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
+                                    только этот этап.
+                                </p>
+                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                    проект</button>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="services__card">
+                    <p class="services__card-number">5</p>
+                    <div class="services__card-content">
+                        <h3 class="services__card-title">Тестируем</h3>
+                        <p class="services__card-subtitle">Проводим ручное функциональное тестирование и пишем UI-автотесты. Готовим чек-листы и тест-кейсы.</p>
+                        <div class="services__card-description">
+                            <p class="services__card-description-text">Мы тестировали, когда делали проект для:</p>
+                            <div class="services__card-description-img-wrapper">
+                                <img src="images/code_space_logo.svg" alt="Код спэйс." class="services__card-description-img">
+                                <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
+                            </div>
+                            <div class="services__card-description-offer">
+                                <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
+                                    только этот этап.
+                                </p>
+                                <a href="#" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                    проект</button>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="services__card">
+                    <p class="services__card-number">6</p>
+                    <div class="services__card-content">
+                        <h3 class="services__card-title">Поддерживаем</h3>
+                        <p class="services__card-subtitle">Работаем по SLA. Следим за стабильностью работы приложения, обновляем под новые устройства и версии iOS и Android.</p>
+                        <div class="services__card-description">
+                            <p class="services__card-description-text">Мы предоставляем поддержку:</p>
+                            <div class="services__card-description-img-wrapper">
+                                <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
+                            </div>
+                            <div class="services__card-description-offer">
+                                <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
+                                    только этот этап.
+                                </p>
+                                <a href="#" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                    проект</button>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
 
         </section>
     </main>
