feat: add section supplemntary-services

--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,8 @@
                                     только этот этап.
                                 </p>
                                 <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                <button type="button"
+                                    class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
                             </div>
                         </div>
@@ -139,7 +140,8 @@
                     <p class="services__card-number">2</p>
                     <div class="services__card-content">
                         <h3 class="services__card-title">Прототипируем</h3>
-                        <p class="services__card-subtitle">Прорабатываем пользовательские сценарии, проектируем логику приложения, скечируем основные экраны.</p>
+                        <p class="services__card-subtitle">Прорабатываем пользовательские сценарии, проектируем логику
+                            приложения, скечируем основные экраны.</p>
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы прототипировали, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
@@ -151,7 +153,8 @@
                                     только этот этап.
                                 </p>
                                 <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                <button type="button"
+                                    class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
                             </div>
                         </div>
@@ -161,12 +164,14 @@
                     <p class="services__card-number">3</p>
                     <div class="services__card-content">
                         <h3 class="services__card-title">Дизайним</h3>
-                        <p class="services__card-subtitle">Адаптируем фирменный стиль заказчика к гайдлайнам платформ. Рисуем удобные и понятные интерфейсы.</p>
+                        <p class="services__card-subtitle">Адаптируем фирменный стиль заказчика к гайдлайнам платформ.
+                            Рисуем удобные и понятные интерфейсы.</p>
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы создавали дизайн, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
                                 <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
-                                <img src="images/code_space_logo.svg" alt="Код спэйс." class="services__card-description-img">
+                                <img src="images/code_space_logo.svg" alt="Код спэйс."
+                                    class="services__card-description-img">
                                 <img src="images/actual_logo.svg" alt="Актуаль." class="services__card-description-img">
                             </div>
                             <div class="services__card-description-offer">
@@ -174,7 +179,8 @@
                                     только этот этап.
                                 </p>
                                 <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                <button type="button"
+                                    class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
                             </div>
                         </div>
@@ -184,12 +190,14 @@
                     <p class="services__card-number">4</p>
                     <div class="services__card-content">
                         <h3 class="services__card-title">Программируем</h3>
-                        <p class="services__card-subtitle">Создаём расширяемую архитектуру, пишем чистый и стабильный код. Интегрируемся с технологиями заказчика.</p>
+                        <p class="services__card-subtitle">Создаём расширяемую архитектуру, пишем чистый и стабильный
+                            код. Интегрируемся с технологиями заказчика.</p>
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы прогаммировали, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
                                 <img src="images/danone_logo.svg" alt="Данон." class="services__card-description-img">
-                                <img src="images/code_space_logo.svg" alt="Код спэйс." class="services__card-description-img">
+                                <img src="images/code_space_logo.svg" alt="Код спэйс."
+                                    class="services__card-description-img">
                                 <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
                                 <img src="images/actual_logo.svg" alt="Актуаль." class="services__card-description-img">
                             </div>
@@ -198,7 +206,8 @@
                                     только этот этап.
                                 </p>
                                 <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                <button type="button"
+                                    class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
                             </div>
                         </div>
@@ -208,11 +217,13 @@
                     <p class="services__card-number">5</p>
                     <div class="services__card-content">
                         <h3 class="services__card-title">Тестируем</h3>
-                        <p class="services__card-subtitle">Проводим ручное функциональное тестирование и пишем UI-автотесты. Готовим чек-листы и тест-кейсы.</p>
+                        <p class="services__card-subtitle">Проводим ручное функциональное тестирование и пишем
+                            UI-автотесты. Готовим чек-листы и тест-кейсы.</p>
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы тестировали, когда делали проект для:</p>
                             <div class="services__card-description-img-wrapper">
-                                <img src="images/code_space_logo.svg" alt="Код спэйс." class="services__card-description-img">
+                                <img src="images/code_space_logo.svg" alt="Код спэйс."
+                                    class="services__card-description-img">
                                 <img src="images/vroom_logo.svg" alt="Врум." class="services__card-description-img">
                             </div>
                             <div class="services__card-description-offer">
@@ -220,7 +231,8 @@
                                     только этот этап.
                                 </p>
                                 <a href="#" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                <button type="button"
+                                    class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
                             </div>
                         </div>
@@ -230,7 +242,8 @@
                     <p class="services__card-number">6</p>
                     <div class="services__card-content">
                         <h3 class="services__card-title">Поддерживаем</h3>
-                        <p class="services__card-subtitle">Работаем по SLA. Следим за стабильностью работы приложения, обновляем под новые устройства и версии iOS и Android.</p>
+                        <p class="services__card-subtitle">Работаем по SLA. Следим за стабильностью работы приложения,
+                            обновляем под новые устройства и версии iOS и Android.</p>
                         <div class="services__card-description">
                             <p class="services__card-description-text">Мы предоставляем поддержку:</p>
                             <div class="services__card-description-img-wrapper">
@@ -241,14 +254,57 @@
                                     только этот этап.
                                 </p>
                                 <a href="#" class="services__card-description-offer-link">Начать работу &xrarr;</a>
-                                <button type="button" class="button-project-order button-project-order_place_projects-services">Заказать
+                                <button type="button"
+                                    class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
                             </div>
                         </div>
                     </div>
                 </article>
             </div>
-
+        </section>
+        <section class="supplementary-services">
+            <div class="supplementary-services__container">
+                <h2 class="supplementary-services__title">Дополнительные услуги</h2>
+                <ul class="supplementary-services__card-container">
+                    <li class="supplementary-services__card">
+                        <div class="supplementary-services__card-img-wrapper">
+                            <img src="images/icon_chat_bots.svg" alt="Разработка чат-ботов." class="supplementary-services__card-img">
+                        </div>
+                        <p class="supplementary-services__card-text">Разработка чат-ботов</p>
+                    </li>
+                    <li class="supplementary-services__card">
+                        <div class="supplementary-services__card-img-wrapper">
+                            <img src="images/icon_ar-vr.svg" alt="Эйар-виар." class="supplementary-services__card-img">
+                        </div>
+                        <p class="supplementary-services__card-text">AR/VR</p>
+                    </li>
+                    <li class="supplementary-services__card">
+                        <div class="supplementary-services__card-img-wrapper">
+                            <img src="images/icon_mobile_games.svg" alt="Разработка мобильных игр." class="supplementary-services__card-img">
+                        </div>
+                        <p class="supplementary-services__card-text">Разработка мобильных игр</p>
+                    </li>
+                    <li class="supplementary-services__card">
+                        <div class="supplementary-services__card-img-wrapper">
+                            <img src="images/icon_tech_task.svg" alt="Составление технического задания." class="supplementary-services__card-img">
+                        </div>
+                        <p class="supplementary-services__card-text">Составление технического задания</p>
+                    </li>
+                    <li class="supplementary-services__card">
+                        <div class="supplementary-services__card-img-wrapper">
+                            <img src="images/icon_server_dev.svg" alt="Серверная разработка." class="supplementary-services__card-img">
+                        </div>
+                        <p class="supplementary-services__card-text">Серверная разработка</p>
+                    </li>
+                    <li class="supplementary-services__card">
+                        <div class="supplementary-services__card-img-wrapper">
+                            <img src="images/icon_outsourcing.svg" alt="Аутсорсинг." class="supplementary-services__card-img">
+                        </div>
+                        <p class="supplementary-services__card-text">Аутсорсинг</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
