feat: add mobile block discussion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="heading">
             <a href="#" class="heading__logo-link">
-                <img src="/images/logo_ust.svg" alt="логотип" class="heading__logo">
+                <img src="images/logo_ust.svg" alt="логотип" class="heading__logo">
                 <h2 lang="en" class="heading__logo-title">Union Smart Technology</h2>
                 <p lang="en" class="heading__logo-subtitle">Simple solutions for complex problems</p>
             </a>
