feat: add adaptive block discussion

--- a/projects.html
+++ b/projects.html
@@ -311,7 +311,7 @@
                 </ul>
             </div>
         </section>
-        <section class="discussion block-indent">
+        <section class="discussion">
             <div class="discussion__content">
                 <h2 class="discussion__title">Обсуждаем</h2>
                 <p class="discussion__subtitle">Ваш проект</p>
@@ -323,7 +323,8 @@
                     <div class="project-form__chapter">
                         <div class="project-form__description">
                             <h3 class="project-form__description-title">Персональная информация</h3>
-                            <p class="project-form__description-subtitle">Расскажите, как к вам обращаться и как можно связаться с вами</p>
+                            <p class="project-form__description-subtitle">Расскажите, как к вам обращаться и как можно
+                                связаться с вами</p>
                         </div>
                         <div class="project-form__inputs">
                             <input type="text" name="project-form-name" id="project-form-name" placeholder="Имя*"
@@ -339,10 +340,14 @@
                     <div class="project-form__chapter">
                         <div class="project-form__description">
                             <h3 class="project-form__description-title">Техническое задание</h3>
-                            <p class="project-form__description-subtitle">Загрузите сюда свое ТЗ и / или оформите бриф</p>
+                            <p class="project-form__description-subtitle">Загрузите сюда свое ТЗ и / или оформите бриф
+                            </p>
                         </div>
                         <div class="project-form__inputs">
-                            <button type="button" class="project-form__brief-btn">Оформить бриф</button>
+                            <div class="project-form__brief-btn-wrapper">
+                                <p class="project-form__brief-btn-caption">Оформление брифа может занять 15-25 минут</p>
+                                <button type="button" class="project-form__brief-btn">Оформить бриф</button>
+                            </div>
                             <input type="url" name="project-form-brief-url" id="project-form-brief-url"
                                 placeholder="Ссылка на Техническое задание" class="project-form__input">
                         </div>
@@ -356,7 +361,9 @@
                                 rows="10" placeholder="Что бы Вы хотели рассказать еще о своем проекте"
                                 class="project-form__input project-form__input_type_textarea"></textarea>
                             <div class="project-form__privacy-wrapper">
-                                <p class="project-form__privacy">Ваши персональные данные обрабатываются в соответствии с нашей</p>
+                                <p class="project-form__privacy">Ваши персональные данные обрабатываются в соответствии
+                                    с
+                                    нашей</p>
                                 <a href="#" class="project-form__privacy-link">Политикой конфидециальности</a>
                             </div>
                         </div>
