feat: add portfolio-page

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                         alt="" class="description__link-image"></a></li>
                         </ul>
                     </div>
-                    <form action="" class="contacts__form">
+                    <form action="#" class="contacts__form">
                         <h5 class="contacts__form-title">Связаться с нами</h5>
                         <p class="contacts__form-subtitle">Оставьте свою контактную информацию, и мы с радостью свяжемся
                             с вами!</p>
