feat: add job-opening block

--- a/team.html
+++ b/team.html
@@ -101,11 +101,11 @@
                 <a href="#"><img src="images/icon_business-card.svg" alt="линкедин" class="business-card__icon"></a>
             </article>
         </section>
-        <section class="vacations">
-            <div class="vacations__content">
-                <h2 class="vacations__title">Открытые позиции</h2>
-                <p class="vacations__subtitle">Присоединяйтесь к нам</p>
-                <button type="button" class="button-vacations button-vacations_place_team">Узнать больше</button>
+        <section class="vacancies">
+            <div class="vacancies__content">
+                <h2 class="vacancies__title">Открытые позиции</h2>
+                <p class="vacancies__subtitle">Присоединяйтесь к нам</p>
+                <button type="button" class="button-vacancies button-vacancies_place_team">Узнать больше</button>
             </div>
         </section>
     </main>
